update name to leo

--- a/src/main/resources/static/push.html
+++ b/src/main/resources/static/push.html
@@ -14,7 +14,7 @@
     <br/>
     /api/push
     person.id<input id="personId" value="1">
-    name <input id="name" value="leonids test">
+    name <input id="name" value="leo test">
     content <input id="content" value="push from push.html">
     <button onclick="push">push</button>
 </body>
